# opentrend

./: .dockerignore  .env.backup  .env.example  .env.temp  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  opentrend.db  project_outline.md  pyproject.toml  run_advanced_frontend.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: analysis.py  auth.py  data.py  forecasting.py  llm_insights.py  timeseries.py  visualization.py
app/core/: __init__.py  config.py  logging.py  security.py
app/database/: connection.py  models.py
app/services/: analysis_service.py  data_collector.py  forecasting_service.py  influxdb_client.py  llm_service.py  scheduler.py  visualization_service.py
docs/: data_ingestion_guide.md  project_report.md
frontend/: README.md  advanced_streamlit_app.py  streamlit_app.py
scripts/: data_ingestion_cron.py  setup.py
