[project]
name = "opentrend"
version = "0.1.0"
description = "AI-powered platform to automatically identify, analyze, and predict market trends using various data sources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework & API
    "fastapi[standard]>=0.116.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    # Data Processing & ML
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "prophet>=1.1.5",
    "torch>=2.3.0",
    # NLP & Text Processing
    "transformers>=4.40.0",
    "vaderSentiment>=3.3.2",
    # Database & Storage
    "sqlmodel>=0.0.20",
    "redis>=5.2.0",
    "influxdb-client>=1.40.0",
    # Data Collection & APIs
    "yfinance>=0.2.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.13.0",
    "feedparser>=6.0.11",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Utilities
    "loguru>=0.7.0",
    # Frontend (MVP)
    "streamlit>=1.49.0",
    "plotly>=5.21.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "altair>=5.3.0",
]


[tool.uv]
dev-dependencies = [
    "isort>=5.13.0",
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "deptry>=0.20.0",
    "mypy>=0.991",
    "ruff>=0.6.9",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250809",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
files = ["app", "scripts"]
ignore_missing_imports = true
# no_strict_optional = true
# disable_error_code = [
#     "no-untyped-def",
#     "assignment", 
#     "attr-defined",
#     "import-untyped",
#     "no-any-return",
#     "arg-type"
# ]
# Development-friendly settings - can be made stricter later
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true


[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["app"]
